--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"editor.fontSize": 13,
 	"files.associations": {
-		"ioctl.h": "c"
+		"ioctl.h": "c",
+		"stdlib.h": "c",
+		"libv4l2.h": "c",
+		"chrono": "c"
 	}
 }
