--- a/mxc_vpu_t/Makefile
+++ b/mxc_vpu_t/Makefile
@@ -4,8 +4,9 @@ CC=$(TOOL_DIR)/arm-poky-linux-gnueabi-gcc --sysroot=$(ROOTFS_DIR)
 LD=$(TOOL_DIR)/arm-poky-linux-gnueabi-ld --sysroot=$(ROOTFS_DIR)
 
 
-CFLAGS= -D_POSIX_C_SOURCE=200809L -std=c11 -W -Wall -O2 -DLINUX -march=armv7-a -mfloat-abi=hard -mfpu=neon -mtune=cortex-a7 -static -I$(ROOTFS_DIR) -I$(ROOTFS_DIR)/usr/include/imx -pedantic
- 
+CFLAGS= -D_POSIX_C_SOURCE=200809L -std=c11 -W -Wall -O2 -DLINUX -march=armv7-a -mfloat-abi=hard -mfpu=neon -mtune=cortex-a7 -static -I$(ROOTFS_DIR) -I$(ROOTFS_DIR)/usr/include/imx  
+#  -pedantic
+# -D_POSIX_C_SOURCE=200809L  -std=c11 -pedantic
 LFLAGS +=  -Wl,-O1 -Wl,--hash-style=gnu -Wl,--as-needed -L $(ROOTFS_DIR)/lib -L $(ROOTFS_DIR)/usr/lib -L $(ROOTFS_DIR)/usr/include/imx/linux -lg2d -lvpu -lipu -lrt -lpthread -lm
 
 OBJS = main.o \
